# PatientIntake

./: .env.example  .gitignore  .vercelignore  README.md  app.py  ecosystem.config.cjs  index.html  pyproject.toml  requirements.txt  script.js  style.css  vercel.json
api/: EHS.py  Notifications.py  clinical_agent_routes.py  drug_scan_routes.py  form_routes.py  iief.py  intake_completion.py  low_libido.py  main.py  patient_routes.py  pedt.py  rag_routes.py  submissions_routes.py  utils.py
core/: crew_orchestrator.py  rag_store.py
frontend/: ai_report.html  clinical-agent-test.css  clinical-agent-test.js  ehs.css  ehs.js  iief.css  iief.js  low-libido.css  low-libido.js  pedt.css  pedt.js  script.js  style.css  submissions.css  submissions.html  submissions.js
nodes/: _clinical_agent.py  _evidence_reviewer_agent.py  _lifestyle_agent.py  _report_agent.py  _research_agent.py  agents.py  tasks.py
tools/: __init__.py  crewai_agent_tools.py  report_normalization.py  report_packet.py  report_pdf.py
