[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-intake"
version = "0.1.0"
description = "Bilingual medical intake app with OCR, RAG, and CrewAI workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask==3.1.1",
  "Flask-Cors==6.0.1",
  "Werkzeug==3.1.3",
  "python-dotenv==1.1.1",
  "requests<3",
  "azure-storage-blob>=12.22.0,<13",
  "pypdf>=5.0.0,<7.0.0",
  "crewai[google-genai]>=0.130.0",
  "chromadb>=0.5.0",
  "reportlab>=4.2.0",
  "arabic-reshaper>=3.0.0",
  "python-bidi>=0.6.0",
  "Pillow==11.3.0",
  "pytesseract==0.3.13",
  "crewai-tools>=0.132.0",
  "PyYAML>=6.0.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "core*", "nodes*", "tools*"]
